--- a/src/components/ExpanceItem.css
+++ b/src/components/ExpanceItem.css
@@ -10,7 +10,7 @@ body{
     font-family: sans-serif;
 }
 
-.expanceItems {
+/* .expanceItems {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -37,6 +37,20 @@ body{
 
 .expanceLocation {
     font-weight: 700;
+} */
+
+.expance-item {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.25);
+    padding:0.5rem;
+    margin: 1rem 0;
+    border-radius: 12px;
+    background-color: #4b4b4b;
+    color: rgb(203, 209, 213);
+    width: 40%;
+    margin-left: 30%;
 }
 
 
