--- a/src/components/ExpanceForm.css
+++ b/src/components/ExpanceForm.css
@@ -1,37 +1,39 @@
-
 .expance-form {
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
-    flex-direction: column;
-    background-color: rgb(226, 188, 138);
-    border-radius: 12px;
-    margin-top: 1rem;
-
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  flex-direction: column;
+  background-color: rgb(226, 188, 138);
+  border-radius: 12px;
+  margin-top: 1rem;
+  /* border: 5px solid red;  */
 }
 
 .items {
-    /* height: 15rem; */
-    display: flex;
-    /* border: 3px solid red; */
-   margin: 1rem;
-   justify-content: space-around;
-   text-align: center;
-   flex-direction: column;
-   width: 40%;
-   margin-left: 25%;
-   width: 50%;
-   height: 10rem;
-    
-}
+  display: flex;
+  margin: 1rem;
+  text-align: left;
+  flex-wrap: wrap;
+  color: black;
+  justify-content: flex-start;
+  align-items: stretch;
+  align-content: space-around;
+  flex-direction: column; 
 
-input{
-    padding: 0.3rem;
-    border-radius: 10px;
+} 
+
+.items>input {
+  padding: 0.3rem;
+  border-radius: 10px;
+  width: 50%;
+}
+.items>label {
+    font-weight: 700;
 }
 
 .btn-form {
-    padding: 0.3rem;
-    border-radius: 10px;
-    margin-bottom: 1rem;
+  padding: 0.3rem;
+  border-radius: 10px;
+  margin-bottom: 1rem;
 }
+
