--- a/src/components/Forms/ExpanceForm.css
+++ b/src/components/Forms/ExpanceForm.css
@@ -19,13 +19,17 @@
   align-items: stretch;
   align-content: space-around;
   flex-direction: column; 
-
+  font-size: 0.9rem;
+  
 } 
 
 .items>input {
+  border: 2px solid rgb(83, 80, 80);
   padding: 0.3rem;
   border-radius: 10px;
   width: 50%;
+  margin-bottom:1rem;
+  cursor: pointer;
 }
 .items>label {
     font-weight: 700;
