--- a/src/components/ExpanceItems/ExpanceFilter.css
+++ b/src/components/ExpanceItems/ExpanceFilter.css
@@ -1,8 +1,11 @@
 
 #expance {
+
     border: 2px solid rgb(145, 138, 138);
-    padding:0.01rem;
+    padding:0.5rem 1rem;
     background-color: rgb(19, 3, 67);
     color: white;
     border-radius: 5px;
+    margin-left: 80%;
+    margin-right: 5%;
 }
