--- a/src/components/ExpanceItems/ExpanceFilter.css
+++ b/src/components/ExpanceItems/ExpanceFilter.css
@@ -1,11 +1,19 @@
 
-#expance {
+.expance-filter {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+}
 
+.filter-items {
     border: 2px solid rgb(145, 138, 138);
-    padding:0.5rem 1rem;
+    padding:0.1rem 0.1rem;
     background-color: rgb(19, 3, 67);
     color: white;
     border-radius: 5px;
-    margin-left: 80%;
-    margin-right: 5%;
+    /* margin:5% 5% 2% 60%; */
+}
+
+.filter-text {
+    color: rgb(107, 128, 207);
 }
