--- a/src/components/Expences/ExpencesDate.css
+++ b/src/components/Expences/ExpencesDate.css
@@ -1,25 +1,25 @@
 
 
-.expance-date {
+.expence-date {
     border: 1px solid rgb(255, 255, 255);
     background-color: rgb(54, 58, 67);
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding:0.3rem 0.5rem;
+    padding:0.3rem 1rem;
     border-radius: 12px;
 }
 
-.expance-data-month {
+.expence-data-month {
     font-size: 0.7rem;
     font-weight: 600;
 }
 
-.expance-date-date {
+.expence-date-date {
     font-size:1.2rem;
     font-weight: 800;
 }
 
-.expance-data-year {
+.expence-data-year {
     font-size:0.8rem;
 }
