--- a/src/components/Expences/ExpencesFilter.css
+++ b/src/components/Expences/ExpencesFilter.css
@@ -1,13 +1,16 @@
 
-.expance-filter {
+.expence-filter {
     display: flex;
     justify-content: space-around;
     text-align: center;
+    margin-top: 5%;
+    margin-bottom: 5%;
+
 }
 
 .filter-items {
     border: 2px solid rgb(145, 138, 138);
-    padding:0.1rem 0.1rem;
+    padding:0.5rem 1rem;
     background-color: rgb(19, 3, 67);
     color: white;
     border-radius: 5px;
