--- a/src/components/Expences/ExpencesItem.css
+++ b/src/components/Expences/ExpencesItem.css
@@ -1,14 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 
-*{
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
-}
 
-body{
-    font-family: sans-serif;
-}
+
 
 /* .expanceItems {
     display: flex;
@@ -39,7 +31,7 @@ body{
     font-weight: 700;
 } */
 
-.expance-item {
+.expencesItem {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -59,6 +51,11 @@ body{
     color: antiquewhite;
     border-radius: 7px;
     border: 1px solid rgb(203, 190, 190);
+}
+
+.expenceItem-list {
+    list-style: none;
+    /* border: 3px solid brown; */
 }
 
 
