--- a/src/components/Forms/ExpencesForm.css
+++ b/src/components/Forms/ExpencesForm.css
@@ -7,11 +7,14 @@
   border-radius: 12px;
   margin-top: 1rem;
   /* border: 5px solid red;  */
+  width: 94%;
+  margin-left: 2.5%;
+  
 }
 
 .items {
   display: flex;
-  margin: 1rem;
+  margin: 0.3rem;
   text-align: left;
   flex-wrap: wrap;
   color: black;
@@ -20,6 +23,7 @@
   align-content: space-around;
   flex-direction: column; 
   font-size: 0.9rem;
+  /* border: 5px solid red; */
   
 } 
 
@@ -28,7 +32,7 @@
   padding: 0.3rem;
   border-radius: 10px;
   width: 50%;
-  margin-bottom:1rem;
+  margin-bottom:0.3rem;
   cursor: pointer;
 }
 .items>label {
