add Chart with all functionality

--- a/src/components/Forms/ExpencesForm.css
+++ b/src/components/Forms/ExpencesForm.css
@@ -7,8 +7,9 @@
   border-radius: 12px;
   margin-top: 1rem;
   /* border: 5px solid red;  */
-  width: 94%;
-  margin-left: 2.5%;
+  width: 93.5%;
+  margin-left: 3.5%;
+  margin-bottom: 1rem;
   
 }
 
