--- a/src/components/Forms/AddExpencesForm.css
+++ b/src/components/Forms/AddExpencesForm.css
@@ -3,12 +3,13 @@
 .addExpencesForm {
   /* border: 3px solid red; */
   text-align: center;
-  width: 93%;
+  width: 93.5%;
   height: 5rem;
   border-radius: 12px;
   margin-left: 3.5%;
   background-color: rgb(226, 188, 138);
   margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .addExpencesForm-btn {
